@@ -15,16 +15,21 @@
 #'   as the parent environment to \code{envir}.
 #' @param debug if \code{TRUE}, displays information useful for debugging,
 #'   including all output that evaluate captures
-#' @param stop_on_error if \code{TRUE}, evaluation will stop on first error.  If
-#'   \code{FALSE} will continue running all code, just as if you'd pasted the
-#'   code into the command line.
+#' @param stop_on_error if \code{2}, evaluation will stop on first error and you
+#'   will get no results back. If \code{1}, evaluation will stop on first error,
+#'   but you will get back all results up to that point. If \code{0} will
+#'   continue running all code, just as if you'd pasted the code into the
+#'   command line.
 #' @param new_device if \code{TRUE}, will open a new graphics device and
 #'   automatically close it after completion. This prevents evaluation from
 #'   interfering with your existing graphics environment.
 #' @import stringr
 evaluate <- function(input, envir = parent.frame(), enclos = NULL, debug = FALSE,
-                     stop_on_error = FALSE, new_device = TRUE) {
+                     stop_on_error = 0L, new_device = TRUE) {
   parsed <- parse_all(input)
+
+  stop_on_error <- as.integer(stop_on_error)
+  stopifnot(length(stop_on_error) == 1)
 
   if (is.null(enclos)) {
     enclos <- if (is.list(envir) || is.pairlist(envir)) parent.frame() else baseenv()
@@ -42,9 +47,14 @@ evaluate <- function(input, envir = parent.frame(), enclos = NULL, debug = FALSE
     out[[i]] <- evaluate_call(parsed$expr[[i]][[1]], parsed$src[[i]],
       envir = envir, enclos = enclos, debug = debug, last = i == length(out))
 
-    if (stop_on_error) {
+    if (stop_on_error > 0L) {
       errs <- vapply(out[[i]], is.error, logical(1))
-      if (any(errs)) break
+
+      if (!any(errs)) next
+      if (stop_on_error == 1L) break
+
+      err <- out[[i]][errs][[1]]
+      stop(err)
     }
   }
 
